refactor(api,web): Use DB models internally (#15)
Instead of using the generated API representations everywhere, we now
use our own internal types and convert to the generated API types at the
application boundary.

This makes it easier to apply business logic without messing with custom
tags and such.
