# api/internal/models/models.go
@@ -5,30 +5,48 @@ import (
 	"errors"
 	"fmt"
 	"log/slog"
+	"time"
 
-	"github.com/cdriehuys/stuff/api/internal/api"
-	"github.com/cdriehuys/stuff/api/internal/apierrors"
 	"github.com/cdriehuys/stuff/api/internal/models/queries"
+	"github.com/go-playground/validator/v10"
 	"github.com/jackc/pgx/v5"
 	"github.com/jackc/pgx/v5/pgconn"
 )
 
+type NewModel struct {
+	VendorID int64  `json:"vendorID"`
+	Model    string `json:"model" validate:"required,min=1,max=150"`
+	Name     string `json:"name" validate:"max=150"`
+}
+
+type Model struct {
+	ID        int64
+	VendorID  int64
+	Model     string
+	Name      string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
 type ModelModel struct {
-	logger *slog.Logger
-	q      *queries.Queries
+	logger   *slog.Logger
+	q        *queries.Queries
+	validate *validator.Validate
 }
 
-func NewModelModel(logger *slog.Logger, db queries.DBTX) *ModelModel {
-	return &ModelModel{logger: logger, q: queries.New(db)}
+func NewModelModel(logger *slog.Logger, db queries.DBTX, validate *validator.Validate) *ModelModel {
+	return &ModelModel{logger: logger, q: queries.New(db), validate: validate}
 }
 
-func (m *ModelModel) Create(ctx context.Context, vendorID int64, model api.NewModel) (api.Model, error) {
+func (m *ModelModel) Create(ctx context.Context, model NewModel) (Model, error) {
+	if err := m.validate.Struct(model); err != nil {
+		return Model{}, err
+	}
+
 	args := queries.CreateModelParams{
 		Model:    model.Model,
-		VendorID: vendorID,
-	}
-	if model.Name != nil {
-		args.Name = *model.Name
+		VendorID: model.VendorID,
+		Name:     model.Name,
 	}
 
 	row, err := m.q.CreateModel(ctx, args)
@@ -37,14 +55,14 @@ func (m *ModelModel) Create(ctx context.Context, vendorID int64, model api.NewMo
 		if errors.As(err, &pgErr) {
 			// foreign_key_violation
 			if pgErr.Code == "23503" {
-				return api.Model{}, fmt.Errorf("failed to add model for vendor %d: %w", vendorID, apierrors.ErrNotFound)
+				return Model{}, fmt.Errorf("failed to add model for vendor %d: %w", model.VendorID, ErrNotFound)
 			}
 		}
 
-		return api.Model{}, fmt.Errorf("failed to create model: %v", err)
+		return Model{}, fmt.Errorf("failed to create model: %v", err)
 	}
 
-	m.logger.InfoContext(ctx, "Created model for vendor.", "vendorID", vendorID, "modelID", row.ID)
+	m.logger.InfoContext(ctx, "Created model.", "modelID", row.ID)
 
 	return modelFromRow(row), nil
 }
@@ -56,7 +74,7 @@ func (m *ModelModel) DeleteByID(ctx context.Context, id int64) error {
 	}
 
 	if rows == 0 {
-		return fmt.Errorf("no model deleted: %w", apierrors.ErrNotFound)
+		return fmt.Errorf("no model deleted: %w", ErrNotFound)
 	}
 
 	m.logger.InfoContext(ctx, "Deleted model.", "id", id)
@@ -64,26 +82,26 @@ func (m *ModelModel) DeleteByID(ctx context.Context, id int64) error {
 	return nil
 }
 
-func (m *ModelModel) GetByID(ctx context.Context, id int64) (api.Model, error) {
+func (m *ModelModel) GetByID(ctx context.Context, id int64) (Model, error) {
 	row, err := m.q.GetModelByID(ctx, id)
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
-			return api.Model{}, fmt.Errorf("no model with ID %d: %w", id, apierrors.ErrNotFound)
+			return Model{}, fmt.Errorf("no model with ID %d: %w", id, ErrNotFound)
 		}
 
-		return api.Model{}, fmt.Errorf("failed to retrieve model: %v", err)
+		return Model{}, fmt.Errorf("failed to retrieve model: %v", err)
 	}
 
 	return modelFromRow(row), nil
 }
 
-func (m *ModelModel) ListByVendorID(ctx context.Context, vendorID int64) ([]api.Model, error) {
+func (m *ModelModel) ListByVendorID(ctx context.Context, vendorID int64) ([]Model, error) {
 	rows, err := m.q.ListModelsByVendorID(ctx, vendorID)
 	if err != nil {
 		return nil, fmt.Errorf("failed to list models: %v", err)
 	}
 
-	models := make([]api.Model, len(rows))
+	models := make([]Model, len(rows))
 	for i, row := range rows {
 		models[i] = modelFromRow(row)
 	}
@@ -91,13 +109,13 @@ func (m *ModelModel) ListByVendorID(ctx context.Context, vendorID int64) ([]api.
 	return models, nil
 }
 
-func (m *ModelModel) ListModels(ctx context.Context) ([]api.Model, error) {
+func (m *ModelModel) ListModels(ctx context.Context) ([]Model, error) {
 	rows, err := m.q.ListModels(ctx)
 	if err != nil {
 		return nil, fmt.Errorf("failed to list models: %v", err)
 	}
 
-	models := make([]api.Model, len(rows))
+	models := make([]Model, len(rows))
 	for i, row := range rows {
 		models[i] = modelFromRow(row)
 	}
@@ -105,31 +123,33 @@ func (m *ModelModel) ListModels(ctx context.Context) ([]api.Model, error) {
 	return models, nil
 }
 
-func (m *ModelModel) UpdateByID(ctx context.Context, id int64, model api.NewModel) (api.Model, error) {
-	args := queries.UpdateModelByIDParams{ID: id, Model: model.Model}
-	if model.Name != nil {
-		args.Name = *model.Name
+func (m *ModelModel) UpdateByID(ctx context.Context, id int64, model NewModel) (Model, error) {
+	args := queries.UpdateModelByIDParams{
+		ID:       id,
+		Model:    model.Model,
+		Name:     model.Name,
+		VendorID: model.VendorID,
 	}
 
 	row, err := m.q.UpdateModelByID(ctx, args)
 	if err != nil {
 		if errors.Is(err, pgx.ErrNoRows) {
-			return api.Model{}, fmt.Errorf("no model with ID %d: %w", id, apierrors.ErrNotFound)
+			return Model{}, fmt.Errorf("no model with ID %d: %w", id, ErrNotFound)
 		}
 
-		return api.Model{}, fmt.Errorf("failed to update model: %v", err)
+		return Model{}, fmt.Errorf("failed to update model: %v", err)
 	}
 
 	return modelFromRow(row), nil
 }
 
-func modelFromRow(row queries.Model) api.Model {
-	return api.Model{
+func modelFromRow(row queries.Model) Model {
+	return Model{
 		CreatedAt: row.CreatedAt.Time,
-		Id:        int(row.ID),
+		ID:        row.ID,
 		Model:     row.Model,
 		Name:      row.Name,
 		UpdatedAt: row.UpdatedAt.Time,
-		VendorID:  int(row.VendorID),
+		VendorID:  row.VendorID,
 	}
 }
